--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7065 2012/10/25 21:52:14 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7066 2012/10/25 22:36:25 eva Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  25 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> package.mask:
+  Add rygel to gstreamer mask.
 
   25 Oct 2012; Mike Gilbert <floppym@gentoo.org> package.mask:
   Update boost mask for 1.51.
