--- a/net-misc/rygel/ChangeLog
+++ b/net-misc/rygel/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/rygel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rygel/ChangeLog,v 1.28 2012/10/25 20:57:50 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rygel/ChangeLog,v 1.29 2012/10/25 22:36:51 eva Exp $
+
+*rygel-0.16.1 (25 Oct 2012)
+
+  25 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> +rygel-0.16.1.ebuild:
+  Version bump.
 
   25 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> rygel-0.14.3.ebuild,
   rygel-0.14.3-r1.ebuild:
