--- a/kde-misc/yakuake/ChangeLog
+++ b/kde-misc/yakuake/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-misc/yakuake
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/yakuake/ChangeLog,v 1.49 2012/08/23 23:23:25 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/yakuake/ChangeLog,v 1.50 2012/10/26 04:48:46 creffett Exp $
+
+*yakuake-2.9.9 (26 Oct 2012)
+
+  26 Oct 2012; Chris Reffett <creffett@gentoo.org> +yakuake-2.9.9.ebuild:
+  Version bump, bug 439074
 
 *yakuake-2.9.8-r1 (23 Aug 2012)
 
