--- a/app-text/calibre/ChangeLog
+++ b/app-text/calibre/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/calibre
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.237 2012/10/25 18:54:47 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.238 2012/10/26 08:28:12 zmedico Exp $
+
+  26 Oct 2012; Zac Medico <zmedico@gentoo.org> calibre-0.9.1.ebuild,
+  calibre-0.9.2.ebuild, calibre-0.9.3.ebuild:
+  Use preferred || ( udisks:2 udisks:0 ) dependency format for bug #439630.
 
   25 Oct 2012; Zac Medico <zmedico@gentoo.org> calibre-0.9.1.ebuild,
   calibre-0.9.2.ebuild, calibre-0.9.3.ebuild:
