--- a/dev-ruby/ruby-augeas/ChangeLog
+++ b/dev-ruby/ruby-augeas/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-augeas
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-augeas/ChangeLog,v 1.20 2012/09/16 07:31:36 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-augeas/ChangeLog,v 1.21 2012/10/26 08:40:09 graaff Exp $
+
+  26 Oct 2012; Hans de Graaff <graaff@gentoo.org> ruby-augeas-0.3.0-r1.ebuild,
+  ruby-augeas-0.4.1.ebuild:
+  Adjust dependencies to make clear that these versions will not build with the
+  lastest version.
 
   16 Sep 2012; Hans de Graaff <graaff@gentoo.org> ruby-augeas-0.4.1.ebuild:
   Revert dependencies to actually work with ruby-ng eclass dependencies setup.
