--- a/app-text/calibre/ChangeLog
+++ b/app-text/calibre/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/calibre
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.238 2012/10/26 08:28:12 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.239 2012/10/26 08:41:23 zmedico Exp $
+
+*calibre-0.9.4 (26 Oct 2012)
+
+  26 Oct 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.9.4.ebuild,
+  -calibre-0.9.2.ebuild:
+  0.9.4 version bump.
 
   26 Oct 2012; Zac Medico <zmedico@gentoo.org> calibre-0.9.1.ebuild,
   calibre-0.9.2.ebuild, calibre-0.9.3.ebuild:
