--- a/dev-ruby/ruby-augeas/ChangeLog
+++ b/dev-ruby/ruby-augeas/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-augeas
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-augeas/ChangeLog,v 1.21 2012/10/26 08:40:09 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-augeas/ChangeLog,v 1.22 2012/10/26 08:59:47 graaff Exp $
+
+  26 Oct 2012; Hans de Graaff <graaff@gentoo.org> ruby-augeas-0.4.1.ebuild,
+  +files/ruby-augeas-0.4.1-libxml2.patch:
+  Add upstream patch to properly compile with augeas 0.10.0.
 
   26 Oct 2012; Hans de Graaff <graaff@gentoo.org> ruby-augeas-0.3.0-r1.ebuild,
   ruby-augeas-0.4.1.ebuild:
