--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.711 2012/10/26 12:23:28 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.712 2012/10/26 12:25:18 blueness Exp $
+
+*hardened-sources-3.6.3 (26 Oct 2012)
+
+  26 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.6.3.ebuild:
+  vanilla-3.6.3 + genpatches-3.6-4 + grsecurity-2.9.1-3.6.3-201210231942
 
 *hardened-sources-3.2.32 (26 Oct 2012)
 
