--- a/net-mail/getmail/ChangeLog
+++ b/net-mail/getmail/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/getmail
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/getmail/ChangeLog,v 1.211 2012/09/30 17:55:08 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/getmail/ChangeLog,v 1.212 2012/10/26 12:28:11 radhermit Exp $
+
+*getmail-4.35.0 (26 Oct 2012)
+
+  26 Oct 2012; Tim Harder <radhermit@gentoo.org> +getmail-4.35.0.ebuild:
+  Version bump.
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> getmail-4.17.0.ebuild,
   getmail-4.24.0.ebuild, getmail-4.32.0.ebuild, getmail-4.33.0.ebuild,
