--- a/kde-misc/yakuake/ChangeLog
+++ b/kde-misc/yakuake/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/yakuake
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/yakuake/ChangeLog,v 1.50 2012/10/26 04:48:46 creffett Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/yakuake/ChangeLog,v 1.51 2012/10/26 14:26:03 creffett Exp $
+
+*yakuake-2.9.9-r1 (26 Oct 2012)
+
+  26 Oct 2012; Chris Reffett <creffett@gentoo.org> +yakuake-2.9.9-r1.ebuild,
+  -yakuake-2.9.9.ebuild:
+  Revision bump, forgot to check for new LINGUAS before.
 
 *yakuake-2.9.9 (26 Oct 2012)
 
