--- a/app-emulation/wine/ChangeLog
+++ b/app-emulation/wine/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for app-emulation/wine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.433 2012/10/13 00:19:19 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.434 2012/10/26 16:46:37 tetromino Exp $
+
+  26 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org> wine-1.3.28.ebuild,
+  wine-1.4.ebuild, wine-1.4.1.ebuild, wine-1.5.0.ebuild, wine-1.5.1.ebuild,
+  wine-1.5.2.ebuild, wine-1.5.3.ebuild, wine-1.5.4.ebuild, wine-1.5.5.ebuild,
+  wine-1.5.6.ebuild, wine-1.5.7.ebuild, wine-1.5.8.ebuild, wine-1.5.9.ebuild,
+  wine-1.5.10.ebuild, wine-1.5.11.ebuild, wine-1.5.12.ebuild,
+  wine-1.5.13.ebuild, wine-1.5.14.ebuild, wine-1.5.15.ebuild,
+  wine-1.5.15-r1.ebuild, wine-9999.ebuild:
+  Pin gstreamer dependency to 0.10 slot.
 
 *wine-1.5.15-r1 (12 Oct 2012)
 
