--- a/media-video/libav/ChangeLog
+++ b/media-video/libav/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/libav
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.107 2012/10/26 13:39:52 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.108 2012/10/26 16:57:34 jer Exp $
+
+  26 Oct 2012; Jeroen Roovers <jer@gentoo.org> libav-0.8.4.ebuild:
+  Stable for HPPA (bug #439052).
 
   26 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libav-0.8.4.ebuild:
   Stable for amd64, wrt bug #439052
