--- a/mail-mta/exim/ChangeLog
+++ b/mail-mta/exim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-mta/exim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.232 2012/10/26 14:33:09 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.233 2012/10/26 17:15:33 jer Exp $
+
+  26 Oct 2012; Jeroen Roovers <jer@gentoo.org> exim-4.80.1.ebuild:
+  Stable for HPPA (bug #439734).
 
   26 Oct 2012; Agostino Sarubbo <ago@gentoo.org> exim-4.80.1.ebuild:
   Stable for amd64, wrt bug #439734
