--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1129 2012/10/24 19:19:03 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1130 2012/10/26 19:59:31 zmedico Exp $
+
+*portage-2.1.11.31 (26 Oct 2012)
+
+  26 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.31.ebuild:
+  2.1.11.31 version bump. This fixes bug #436294 (show linker version in emerge
+  --info), bug #439490 (use checkbashisms for init script QA warning), bug
+  #439584 (sync disk after each package merge), bug #439688 (fix unnecessary
+  rebuilds triggered by missed updates), and bug #439694 (fix emerge to account
+  for initially broken built slot operator deps). Bug #431026 tracks all bugs
+  fixed since portage-2.1.11.9.
 
   24 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.29.ebuild,
   -portage-2.2.0_alpha140.ebuild:
