--- a/app-emulation/wine/ChangeLog
+++ b/app-emulation/wine/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/wine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.434 2012/10/26 16:46:37 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.435 2012/10/26 20:35:36 tetromino Exp $
+
+*wine-1.5.16 (26 Oct 2012)
+
+  26 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org> +wine-1.5.16.ebuild,
+  wine-9999.ebuild:
+  Bump, see http://www.winehq.org/announce/1.5.16 for the announcement.
 
   26 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org> wine-1.3.28.ebuild,
   wine-1.4.ebuild, wine-1.4.1.ebuild, wine-1.5.0.ebuild, wine-1.5.1.ebuild,
