--- a/app-emulation/vboxgtk/ChangeLog
+++ b/app-emulation/vboxgtk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/vboxgtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/vboxgtk/ChangeLog,v 1.11 2012/10/24 19:53:40 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/vboxgtk/ChangeLog,v 1.12 2012/10/26 21:43:50 hasufell Exp $
+
+  26 Oct 2012; Julian Ospald <hasufell@gentoo.org> vboxgtk-0.8.0-r3.ebuild:
+  fix build time deps
 
 *vboxgtk-0.8.0-r3 (24 Oct 2012)
 
