--- a/media-video/libav/ChangeLog
+++ b/media-video/libav/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/libav
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.108 2012/10/26 16:57:34 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.109 2012/10/27 12:28:05 klausman Exp $
+
+  27 Oct 2012; Tobias Klausmann <klausman@gentoo.org> libav-0.8.4.ebuild:
+  Stable on alpha, bug #439052
 
   26 Oct 2012; Jeroen Roovers <jer@gentoo.org> libav-0.8.4.ebuild:
   Stable for HPPA (bug #439052).
