--- a/media-sound/clementine/ChangeLog
+++ b/media-sound/clementine/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/clementine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.68 2012/10/08 17:13:03 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.69 2012/10/27 14:17:33 maksbotan Exp $
+
+*clementine-1.1.0 (27 Oct 2012)
+
+  27 Oct 2012; Maxim Koltsov <maksbotan@gentoo.org> +clementine-1.1.0.ebuild:
+  Bump to 1.1.0, thanks to Nikoli
 
 *clementine-1.1.0_rc1 (08 Oct 2012)
 
@@ -296,4 +301,3 @@
   22 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
   +clementine-0.1.ebuild:
   Initial commit.
-
