--- a/net-misc/tor/ChangeLog
+++ b/net-misc/tor/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/tor
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tor/ChangeLog,v 1.361 2012/10/27 02:33:56 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tor/ChangeLog,v 1.362 2012/10/27 14:23:38 blueness Exp $
+
+  27 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  files/tor-0.2.4.5-fix-udef-ref-math.patch:
+  Improve patch for bug #435040
 
   27 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   +files/tor-0.2.4.5-fix-udef-ref-math.patch, tor-0.2.4.5_alpha.ebuild:
