--- a/media-sound/cantata/ChangeLog
+++ b/media-sound/cantata/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/cantata
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/cantata/ChangeLog,v 1.7 2012/08/01 12:36:09 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/cantata/ChangeLog,v 1.8 2012/10/27 15:10:23 kensington Exp $
+
+*cantata-0.8.3.1 (27 Oct 2012)
+
+  27 Oct 2012; Michael Palimaka <kensington@gentoo.org> +cantata-0.8.3.1.ebuild,
+  metadata.xml:
+  Version bump. Fixes build problems (bug #428400) and automagic dependencies
+  (bug #428524).
 
   01 Aug 2012; Johannes Huber <johu@gentoo.org> cantata-0.8.2.ebuild,
   metadata.xml:
