--- a/net-analyzer/jnettop/ChangeLog
+++ b/net-analyzer/jnettop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/jnettop
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/jnettop/ChangeLog,v 1.24 2012/08/17 04:50:27 heroxbd Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/jnettop/ChangeLog,v 1.25 2012/10/27 15:43:35 pinkbyte Exp $
+
+  27 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> jnettop-0.13.0-r1.ebuild:
+  Fix automagic dependencies wrt bug #439752. Thanks to Phr33d0m for
+  discovering this issue
 
   17 Aug 2012; Benda Xu <heroxbd@gentoo.org> jnettop-0.13.0-r1.ebuild:
   keyword ~arm and ~x86-linux. ref #431612
