--- a/net-analyzer/jnettop/ChangeLog
+++ b/net-analyzer/jnettop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/jnettop
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/jnettop/ChangeLog,v 1.25 2012/10/27 15:43:35 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/jnettop/ChangeLog,v 1.26 2012/10/27 15:45:01 pinkbyte Exp $
+
+  27 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> jnettop-0.13.0-r1.ebuild:
+  Add ~amd64-linux keyword
 
   27 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> jnettop-0.13.0-r1.ebuild:
   Fix automagic dependencies wrt bug #439752. Thanks to Phr33d0m for
