--- a/media-sound/cantata/ChangeLog
+++ b/media-sound/cantata/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/cantata
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/cantata/ChangeLog,v 1.8 2012/10/27 15:10:23 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/cantata/ChangeLog,v 1.9 2012/10/27 15:45:53 yngwin Exp $
+
+  27 Oct 2012; Ben de Groot <yngwin@gentoo.org> cantata-0.8.3.1.ebuild,
+  metadata.xml:
+  Some useflag and deps adjustments. Bump to eapi-5. Add to qt herd.
 
 *cantata-0.8.3.1 (27 Oct 2012)
 
