--- a/media-sound/clementine/ChangeLog
+++ b/media-sound/clementine/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/clementine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.69 2012/10/27 14:17:33 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.70 2012/10/27 16:14:13 maksbotan Exp $
+
+  27 Oct 2012; Maxim Koltsov <maksbotan@gentoo.org> clementine-1.1.0.ebuild:
+  Fix missing \n at end of file
 
 *clementine-1.1.0 (27 Oct 2012)
 
