--- a/net-libs/libproxy/ChangeLog
+++ b/net-libs/libproxy/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libproxy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.91 2012/10/27 14:22:20 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.92 2012/10/27 16:41:38 blueness Exp $
+
+  27 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  libproxy-0.4.10-r1.ebuild:
+  stable ppc ppc64, bug #439122
 
   27 Oct 2012; Tobias Klausmann <klausman@gentoo.org>
   libproxy-0.4.10-r1.ebuild:
