--- a/x11-misc/spacefm/ChangeLog
+++ b/x11-misc/spacefm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/spacefm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/ChangeLog,v 1.36 2012/10/21 19:28:06 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/ChangeLog,v 1.37 2012/10/27 17:39:11 hasufell Exp $
+
+  27 Oct 2012; Julian Ospald <hasufell@gentoo.org> spacefm-0.8.0.ebuild:
+  x86 stable wrt #438346
 
 *spacefm-0.8.1 (21 Oct 2012)
 
