--- a/virtual/rubygems/ChangeLog
+++ b/virtual/rubygems/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for virtual/rubygems
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/rubygems/ChangeLog,v 1.39 2012/10/21 18:23:48 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/rubygems/ChangeLog,v 1.40 2012/10/27 17:56:14 armin76 Exp $
+
+  27 Oct 2012; Raúl Porcel <armin76@gentoo.org> rubygems-4.ebuild:
+  sh stable wrt #411507
 
   21 Oct 2012; Raúl Porcel <armin76@gentoo.org> rubygems-4.ebuild:
   alpha/ia64/s390/sparc stable wrt #411507
