--- a/dev-ruby/racc/ChangeLog
+++ b/dev-ruby/racc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/racc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/racc/ChangeLog,v 1.78 2012/10/21 18:36:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/racc/ChangeLog,v 1.79 2012/10/27 18:15:08 armin76 Exp $
+
+  27 Oct 2012; Raúl Porcel <armin76@gentoo.org> racc-1.4.6.ebuild:
+  s390/sh stable wrt #411507
 
   21 Oct 2012; Raúl Porcel <armin76@gentoo.org> racc-1.4.6-r1.ebuild:
   alpha/ia64/sparc stable wrt #411507
