--- a/virtual/rubygems/ChangeLog
+++ b/virtual/rubygems/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for virtual/rubygems
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/rubygems/ChangeLog,v 1.40 2012/10/27 17:56:14 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/rubygems/ChangeLog,v 1.41 2012/10/27 18:16:45 armin76 Exp $
+
+  27 Oct 2012; Raúl Porcel <armin76@gentoo.org> rubygems-1.ebuild:
+  sh stable wrt #411507
 
   27 Oct 2012; Raúl Porcel <armin76@gentoo.org> rubygems-4.ebuild:
   sh stable wrt #411507
