--- a/x11-themes/gtk-engines-xfce/ChangeLog
+++ b/x11-themes/gtk-engines-xfce/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/gtk-engines-xfce
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.156 2012/10/04 11:33:13 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.157 2012/10/27 20:31:35 ago Exp $
+
+  27 Oct 2012; <ago@gentoo.org> gtk-engines-xfce-3.0.1-r200.ebuild:
+  Stable for amd64, wrt bug #429484
 
 *gtk-engines-xfce-3.0.1-r300 (04 Oct 2012)
 *gtk-engines-xfce-3.0.1-r200 (04 Oct 2012)
