--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7068 2012/10/27 16:31:12 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7069 2012/10/27 20:38:23 ulm Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  27 Oct 2012; Ulrich Müller <ulm@gentoo.org> updates/4Q-2012:
+  Package move app-doc/openmotif-manual to app-doc/motif-reference-manual,
+  bug 439910.
 
   27 Oct 2012; Anthony G. Basile <blueness@gentoo.org> profiles.desc:
   make hardened/linux/uclibc/{amd64,x86} public
