--- a/sys-apps/tuxonice-userui/ChangeLog
+++ b/sys-apps/tuxonice-userui/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/tuxonice-userui
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/ChangeLog,v 1.25 2012/10/20 08:17:47 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/ChangeLog,v 1.26 2012/10/28 08:28:49 pacho Exp $
+
+*tuxonice-userui-1.1-r1 (28 Oct 2012)
+
+  28 Oct 2012; Pacho Ramos <pacho@gentoo.org> +tuxonice-userui-1.1-r1.ebuild,
+  -tuxonice-userui-1.1.ebuild:
+  Compile fbsplash support properly and add migration information for people
+  upgrading from 1.0, bug #439120 by Sergey Fionov.
 
 *tuxonice-userui-1.1 (20 Oct 2012)
 
