--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.471 2012/10/27 22:24:10 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.472 2012/10/28 09:02:24 pacho Exp $
+
+  28 Oct 2012; Pacho Ramos <pacho@gentoo.org> emul-linux-x86.eclass:
+  Set QA_PREBUILT as all installed files are precompiled.
 
   27 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gnome2-utils.eclass:
   Avoid sedding configure.ac in gnome2_disable_deprecation_warning to prevent
