--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.133 2012/10/24 07:19:19 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.134 2012/10/28 09:27:24 zmedico Exp $
+
+  28 Oct 2012; Zac Medico <zmedico@gentoo.org> qemu-1.1.1-r1.ebuild,
+  qemu-1.1.2-r1.ebuild, qemu-1.1.2-r2.ebuild, qemu-1.2.0.ebuild,
+  qemu-9999.ebuild:
+  Fix spelling of CONFIG_CHECK for vhost-net.
 
 *qemu-1.1.2-r2 (24 Oct 2012)
 
