--- a/dev-ruby/nokogiri/ChangeLog
+++ b/dev-ruby/nokogiri/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/nokogiri
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/ChangeLog,v 1.77 2012/07/26 12:50:05 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/ChangeLog,v 1.78 2012/10/28 12:00:39 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> nokogiri-1.5.2.ebuild:
+  ia64/sparc stable wrt #423071
 
   26 Jul 2012; Anthony G. Basile <blueness@gentoo.org> nokogiri-1.5.2.ebuild:
   Stable ppc64, bug #423071
