--- a/dev-ruby/rexical/ChangeLog
+++ b/dev-ruby/rexical/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rexical
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexical/ChangeLog,v 1.27 2012/07/26 12:48:15 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexical/ChangeLog,v 1.28 2012/10/28 11:56:53 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> rexical-1.0.5-r1.ebuild:
+  ia64/sparc stable wrt #423071
 
   26 Jul 2012; Anthony G. Basile <blueness@gentoo.org> rexical-1.0.5-r1.ebuild:
   Stable ppc64, bug #423071
