--- a/dev-ruby/syntax/ChangeLog
+++ b/dev-ruby/syntax/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/syntax
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/syntax/ChangeLog,v 1.40 2012/08/14 18:59:04 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/syntax/ChangeLog,v 1.41 2012/10/28 12:02:32 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> syntax-1.0.0-r3.ebuild:
+  ia64/sparc stable wrt #426668
 
   14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
   Update metadata.xml so that it's the same as most other packages.
