--- a/net-irc/irssi-xmpp/ChangeLog
+++ b/net-irc/irssi-xmpp/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/irssi-xmpp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi-xmpp/ChangeLog,v 1.6 2012/03/12 13:24:27 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi-xmpp/ChangeLog,v 1.7 2012/10/28 12:02:33 ago Exp $
+
+  28 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  -files/irssi-xmpp-0.51-build_system.patch,
+  -files/irssi-xmpp-0.51-implicit_conversion.patch, -irssi-xmpp-0.51.ebuild:
+  Remove old
 
 *irssi-xmpp-0.52 (12 Mar 2012)
 
@@ -34,4 +39,3 @@
   03 Nov 2009; Tobias Scherbaum <dertobi123@gentoo.org>
   +irssi-xmpp-0.50.ebuild, +metadata.xml:
   Initial import, ebuild by Tim Weber (#291577)
-
