--- a/net-irc/irssi-xmpp/ChangeLog
+++ b/net-irc/irssi-xmpp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/irssi-xmpp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi-xmpp/ChangeLog,v 1.7 2012/10/28 12:02:33 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi-xmpp/ChangeLog,v 1.8 2012/10/28 12:09:21 ago Exp $
+
+  28 Oct 2012; Agostino Sarubbo <ago@gentoo.org> irssi-xmpp-0.52.ebuild:
+  Restore loudmouth[debug] wrt #392613
 
   28 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   -files/irssi-xmpp-0.51-build_system.patch,
