--- a/dev-ruby/diff-lcs/ChangeLog
+++ b/dev-ruby/diff-lcs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/diff-lcs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/diff-lcs/ChangeLog,v 1.40 2012/08/14 03:23:50 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/diff-lcs/ChangeLog,v 1.41 2012/10/28 12:10:22 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> diff-lcs-1.1.3.ebuild:
+  ia64/sparc stable wrt #426668
 
   14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> diff-lcs-1.1.3.ebuild:
   Fix dependencies: hoe is needed for USE=doc, but no longer for USE=test.
