--- a/dev-ruby/rspec-core/ChangeLog
+++ b/dev-ruby/rspec-core/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rspec-core
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-core/ChangeLog,v 1.35 2012/08/14 18:48:39 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-core/ChangeLog,v 1.36 2012/10/28 12:08:07 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> rspec-core-2.6.4-r1.ebuild:
+  ia64/sparc stable wrt #426668
 
   14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
   Update metadata.xml so that it's the same as most other packages.
