--- a/dev-ruby/rspec-expectations/ChangeLog
+++ b/dev-ruby/rspec-expectations/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rspec-expectations
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.32 2012/09/16 07:00:12 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.33 2012/10/28 12:08:41 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org>
+  rspec-expectations-2.6.0-r1.ebuild:
+  ia64/sparc stable wrt #426668
 
 *rspec-expectations-2.11.3 (16 Sep 2012)
 
