--- a/dev-ruby/rspec-mocks/ChangeLog
+++ b/dev-ruby/rspec-mocks/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rspec-mocks
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-mocks/ChangeLog,v 1.33 2012/10/05 11:12:07 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-mocks/ChangeLog,v 1.34 2012/10/28 12:09:15 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> rspec-mocks-2.6.0-r1.ebuild:
+  ia64/sparc stable wrt #426668
 
 *rspec-mocks-2.11.3 (05 Oct 2012)
 
