--- a/sys-apps/tuxonice-userui/ChangeLog
+++ b/sys-apps/tuxonice-userui/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/tuxonice-userui
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/ChangeLog,v 1.26 2012/10/28 08:28:49 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/ChangeLog,v 1.27 2012/10/28 12:35:07 pacho Exp $
+
+  28 Oct 2012; Pacho Ramos <pacho@gentoo.org> tuxonice-userui-1.1-r1.ebuild:
+  Rephrase elog information to be a bit more general (#439120#c11 by Robert
+  Cabrera.
 
 *tuxonice-userui-1.1-r1 (28 Oct 2012)
 
