--- a/dev-ruby/rexical/ChangeLog
+++ b/dev-ruby/rexical/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rexical
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexical/ChangeLog,v 1.28 2012/10/28 11:56:53 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexical/ChangeLog,v 1.29 2012/10/28 13:07:05 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> rexical-1.0.5.ebuild,
+  rexical-1.0.5-r1.ebuild:
+  alpha stable
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org> rexical-1.0.5-r1.ebuild:
   ia64/sparc stable wrt #423071
