--- a/dev-ruby/locale/ChangeLog
+++ b/dev-ruby/locale/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/locale
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/locale/ChangeLog,v 1.38 2012/08/25 06:34:16 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/locale/ChangeLog,v 1.39 2012/10/28 13:09:38 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> locale-2.0.5-r3.ebuild:
+  Re-add ~alpha/~ia64/~sparc
 
   25 Aug 2012; Hans de Graaff <graaff@gentoo.org> -locale-2.0.5-r2.ebuild:
   Cleanup.
